// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contract should create request 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{6EB0825380011F6E292AB9FE5825731C5F568DB15E68F69707390F1976DA6A7F173916703B9_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "@treasure(owner)",
          "to": "@safe",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 8138n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "type": "empty",
            },
            "bounce": true,
            "from": "@safe",
            "to": "@treasure(owner)",
            "type": "internal",
            "value": 990862000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`contract should create request 2`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{FF7DE06C004_}",
            "type": "cell",
          },
          "bounce": true,
          "from": "@treasure(owner)",
          "to": "@safe",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15981n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{561376150000000000000000}",
              "type": "cell",
            },
            "bounce": true,
            "from": "@safe",
            "to": "kQCQX1XVtXgDF3BTzwaWn8E8xCneU4h6JloA_swDRj6iqvTk",
            "type": "internal",
            "value": 965358000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`contract should create vote: deploy 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{561376150000000000000000}",
            "type": "cell",
          },
          "bounce": true,
          "from": "@treasure(safe)",
          "to": "@signer",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 6230n,
      },
    ],
  },
]
`;

exports[`contract should create vote: double vote 1`] = `
[
  {
    "$seq": 2,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "YES",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(owner1)",
          "to": "@signer",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "failed",
        "errorCode": 3094,
        "errorMessage": "Already signed or not an owner",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF00000000594553}",
            "type": "cell",
          },
          "bounce": false,
          "from": "@signer",
          "to": "@treasure(owner1)",
          "type": "internal",
          "value": 993614000n,
        },
      },
    ],
  },
]
`;

exports[`contract should create vote: invalid vote 1`] = `
[
  {
    "$seq": 3,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "YES",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(unknown)",
          "to": "@signer",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "failed",
        "errorCode": 3094,
        "errorMessage": "Already signed or not an owner",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "cell": "x{FFFFFFFF00000000594553}",
            "type": "cell",
          },
          "bounce": false,
          "from": "@signer",
          "to": "@treasure(unknown)",
          "type": "internal",
          "value": 993614000n,
        },
      },
    ],
  },
]
`;

exports[`contract should create vote: vote 1`] = `
[
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "YES",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(owner1)",
          "to": "@signer",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14931n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{9DC5D639C00AB084690786D4F70011428E4B6BC532BFB47076AC4855DC7DA8144B22F85364F}",
              "type": "cell",
            },
            "to": null,
            "type": "external-out",
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Vote accepted",
              "type": "text",
            },
            "bounce": false,
            "from": "@signer",
            "to": "@treasure(owner1)",
            "type": "internal",
            "value": 983833000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`contract should create vote: vote 2`] = `
[
  {
    "$seq": 4,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "YES",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(owner2)",
          "to": "@signer",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 20550n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{9DC5D639C000221528D67B5DFE51431A4453FDEA766A6642F184A3A3C5C6F16CC89465AB1EC}",
              "type": "cell",
            },
            "to": null,
            "type": "external-out",
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Vote accepted",
              "type": "text",
            },
            "bounce": false,
            "from": "@signer",
            "to": "@treasure(owner2)",
            "type": "internal",
            "value": 978214000n,
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{E7E1407CC_}",
              "type": "cell",
            },
            "to": null,
            "type": "external-out",
          },
        ],
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{CDF42430800AB60B6F3F99430109C97E1BE903020AA7211D122BF269A5ECE534A6217AE119500000002000000020000000000002AF8004_}
 x{817002_}
  x{BFC110A946B3DAEFF28A18D2229FEF53B35332178C251D1E2E378B6644A32D58F66_}
  x{BFD58423483C36A7B8008A14725B5E2995FDA383B56242AEE3ED40A25917C29B27E_}",
              "type": "cell",
            },
            "bounce": false,
            "from": "@signer",
            "to": "@treasure(safe)",
            "type": "internal",
            "value": 987446000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`contract should deploy correctly 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{946A98B60000000000000000}",
            "type": "cell",
          },
          "bounce": true,
          "from": "@treasure(owner)",
          "to": "@deployer",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 8274n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "cell": "x{AFF90F570000000000000000}",
              "type": "cell",
            },
            "bounce": true,
            "from": "@deployer",
            "to": "@treasure(owner)",
            "type": "internal",
            "value": 990530000n,
          },
        ],
      },
    ],
  },
]
`;
